2008-3-7 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  app_generators/rucola/templates/config/dependencies.rb,
	  bin/rucola,
	  lib/rucola/dependencies,
	  lib/rucola/dependencies.rb,
	  lib/rucola/dependencies/exclusions.rb,
	  lib/rucola/dependencies/resolver.rb,
	  lib/rucola/initializer.rb,
	  test/test_dependencies.rb:

	- Changed the actual dependency resolving to happen in a separate ruby process. (This fixes for instance the mess that activesupport makes of #require etc.)
	- Added the possibility to exclude certain libraries from being resolved. eg: Rucola::Dependencies.exclude(/some_lib/)
	- We now require all the files that would normally be needed by an application directly in initializer so that the dependecy resolver can also resolve Rucola itself.
	- Fixed some minor stuff.

2008-3-7 Eloy Duran <e.duran@superalloy.nl>

	* app_generators/rucola/templates/project.pbxproj.erb:

	Add lib/ to the xcode project template.

2008-2-25 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/rucola_support/core_ext/objc/nsimage.rb,
	  test/test_objc_core_ext.rb:

	Also find images in app/assets with extension.

2008-2-20 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/initializer.rb,
	  test/test_initializer.rb:

	Fixed bug when directories in vendor/plugins exist that don't have a init.rb file.
	Reported by Jelle Helsen.

2008-2-15 Eloy Duran <e.duran@superalloy.nl>

	* test/test_fsevents.rb:

	Removed redundant, and unused, test.

2008-2-15 Manfred Stienstra <manfred@fngtps.com>

	* ChangeLog,
	  lib/rucola/fsevents.rb,
	  test/test_fsevents.rb:

	- Accept options hash in Rucola::FSEvents#new to set configuration of the event listener.

2008-2-15 Manfred Stienstra <manfred@fngtps.com>

	* lib/rucola/fsevents.rb,
	  test/test_dependencies.rb,
	  test/test_reloader.rb:

	- Made tests green.

2008-2-15 Manfred Stienstra <manfred@fngtps.com>

	* Rakefile:

	- Added rdoc task

2008-2-8 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,